--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Aidez les futurs apprentis à choisir leur formation"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/user-astronaut-solid.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/avatar.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
