--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="/dsfr/favicon/apple-touch-icon.png" />
+    <link rel="icon" href="/dsfr/favicon/favicon.svg" type="image/svg+xml" />
+    <link rel="shortcut icon" href="/dsfr/favicon/favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="/dsfr/favicon/manifest.webmanifest" crossorigin="use-credentials" />
+    <link rel="stylesheet" href="/dsfr/utility/icons/icons.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Aidez les futurs apprentis à choisir leur formation"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/avatar.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
