--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -13,6 +13,7 @@
       name="description"
       content="Aidez les futurs apprentis à choisir leur formation"
     />
+    <meta name="referrer" content="strict-origin-when-cross-origin"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
