feat(extension): small enhancements

--- a/extension/sirius-onisep-injector/chrome/index.html
+++ b/extension/sirius-onisep-injector/chrome/index.html
@@ -28,16 +28,18 @@
           <div id="tabpanel-formation-panel" class="fr-tabs__panel fr-tabs__panel--selected" role="tabpanel" aria-labelledby="tabpanel-formation" tabindex="0">
             <ul id="formation-link">
             </ul> 
+            <div id="formation-error" class="fr-alert fr-alert--error" style="display: none">
+              <h3 class="fr-alert__title">Une erreur s'est produite</h3>
+              <p id="formation-error-text"></p>
+          </div>
           </div>
           <div id="tabpanel-etablissement-panel" class="fr-tabs__panel" role="tabpanel" aria-labelledby="tabpanel-405" tabindex="0">
             <ul id="etablissement-link"></ul>
+            <div id="etablissement-error" class="fr-alert fr-alert--error" style="display: none">
+              <h3 class="fr-alert__title">Une erreur s'est produite</h3>
+              <p id="etablissement-error-text"></p>
           </div>
-      </div>
-      </section>
-      <section>
-        <div class="fr-toggle">
-          <input type="checkbox" class="fr-toggle__input" aria-describedby="activation-button-hint-text" id="activation-button" checked>
-          <label class="fr-toggle__label" for="activation-button">Désactiver l'affichage</label>
+          </div>
       </div>
       </section>
     </main>
