--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/dsfr/favicon/favicon.svg" type="image/svg+xml" />
     <link rel="shortcut icon" href="/dsfr/favicon/favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="/dsfr/favicon/manifest.webmanifest" crossorigin="use-credentials" />
-    <link rel="stylesheet" href="/dsfr/utility/icons/icons.min.css" />
+    <link rel="stylesheet" href="/dsfr/utility/icons/icons.min.css?hash=c6c054f5" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
