--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -9,11 +9,8 @@
     <link rel="stylesheet" href="/dsfr/utility/icons/icons.min.css?hash=c6c054f5" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Aidez les futurs apprentis à choisir leur formation"
-    />
-    <meta name="referrer" content="strict-origin-when-cross-origin"/>
+    <meta name="description" content="Aidez les futurs apprentis à choisir leur formation" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
